--- a/styles/site.css
+++ b/styles/site.css
@@ -691,6 +691,12 @@ button {
         margin-right: auto;
         width: fit-content;
     }
+
+    .pfp-box {
+        margin-left: auto;
+        margin-right: auto;
+        flex: column;
+    }
 }
 
 @media (max-width:1100px) {
