--- a/styles/site.css
+++ b/styles/site.css
@@ -709,7 +709,7 @@ button {
         flex-direction: column;
     }
 
-    .pfp-box {
+    .pfp-box h1 {
         margin-left: auto;
         margin-right: auto;
     }
