--- a/styles/site.css
+++ b/styles/site.css
@@ -342,6 +342,10 @@ footer li {
     width: fit-content;
 }
 
+.cent .title-cent h1 {
+    justify-content: center;
+}
+
 blockquote {
     border: solid #790000;
     border-radius: 5px;
@@ -713,6 +717,8 @@ button {
         margin-left: auto;
         margin-right: auto;
     }
+
+   
 }
 
 @media (max-width:1100px) {
@@ -797,6 +803,11 @@ button {
     .fp-row-3 .fp,
     .fp-row-4 .fp {
         width: 95%;
+    }
+
+     blockquote {
+        width: 95%;
+        
     }
 
 }
